infra/k8s/posts-service.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: posts
spec:
  containers:
    - name: posts
      image: arturserra/posts:latest
      imagePullPolicy: Never
